# social-aggregator

./: .gitignore  .sops.yaml  Cargo.toml  compose.yml  deny.toml  flake.nix  notes.org  taplo.toml
.cargo/: audit.toml  config.toml
.config/: hakari.toml
.github/workflows/: checks.yml  deploys.yml  integrations.yml  update.yml
aggregator/: Cargo.toml  http.org
aggregator-ui/: index.html  openapi-config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
aggregator-ui/src/: App.tsx  main.tsx  vite-env.d.ts
aggregator-ui/src/services/: aggregator-generated.ts  aggregator.ts  index.ts
aggregator-ui/src/state/: index.ts
aggregator/src/: error.rs  json.rs  lib.rs  main.rs
aggregator/src/routes/: health.rs  mod.rs  post.rs  sse.rs
commons/proto-definitions/: Cargo.toml  build.rs
commons/proto-definitions/proto/: post.proto
commons/proto-definitions/src/: lib.rs  post.proto  prost_timestamp_serde.rs
commons/social-engine/: Cargo.toml
commons/social-engine/src/: engine.rs  error.rs  lib.rs
commons/workspace-hack/: Cargo.toml  build.rs
feeders/: Cargo.toml
feeders/src/: engine.rs  error.rs  lib.rs  main.rs  mastodon.rs
feeders/src/feeder/: builder.rs  mod.rs  queue.rs
feeders/src/socials/: mastodon.rs  mod.rs
feeders/tests/: integration.rs
infra/kafka/: raw_post.yaml  topics.yaml
infra/secrets/: dev.yaml
mastodon/: Cargo.toml
mastodon/src/: main.rs
social-consumer/: Cargo.toml
social-consumer/src/: main.rs
social-feeders/: Cargo.toml
social-feeders/src/: engine.rs  error.rs  main.rs  mastodon.rs
