[workspace]
resolver = "2"
members = ["aggregator", "commons/workspace-hack", "feeders"]

[workspace.dependencies]
anyhow = "1.0.100"
megalodon = "1.0.3"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
workspace-hack = { version = "0.1.0", path = "commons/workspace-hack" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Joel DSouza <joeldsouzax@gmail.com"]
repository = "https://github.com/joeldsouzax/social-aggregator"
categories = ["mastodon", "rust", "nix"]
description = "social media aggregator"
homepage = ""

[workspace.metadata.crane]
name = "social-aggregator"
