[workspace]
resolver = "2"
members = ["aggregator", "commons/proto-definitions", "commons/workspace-hack", "feeders"]

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws", "macros"] }
megalodon = "1.0.3"
prost = "0.14.1"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
utoipa-swagger-ui-vendored = "0.1.2"
workspace-hack = { version = "0.1.0", path = "commons/workspace-hack" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Joel DSouza <joeldsouzax@gmail.com"]
repository = "https://github.com/joeldsouzax/social-aggregator"
categories = ["mastodon", "rust", "nix"]
description = "social media aggregator"
homepage = ""

[workspace.metadata.crane]
name = "social-aggregator"
