[workspace]
resolver = "2"
members = [
    "aggregator",
    "commons/proto-definitions",
    "commons/social-engine",
    "commons/workspace-hack",
    "feeders",
    "social-consumer",
]

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws", "macros", "json"] }
chrono = "0.4.42"
futures-util = "0.3.31"
megalodon = "1.0.3"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
proto-definitions = { version = "0.1.0", path = "commons/proto-definitions" }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
redis = "0.32.7"
schema_registry_converter = { version = "4.6.0", features = ["proto_raw", "easy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
social-engine = { version = "0.1.0", path = "commons/social-engine" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
utoipa-swagger-ui-vendored = "0.1.2"
validator = { version = "0.20.0", features = ["derive"] }
workspace-hack = { version = "0.1.0", path = "commons/workspace-hack" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Joel DSouza <joeldsouzax@gmail.com"]
repository = "https://github.com/joeldsouzax/social-aggregator"
categories = ["mastodon", "rust", "nix"]
description = "social media aggregator"
homepage = ""

[workspace.metadata.crane]
name = "social-aggregator"
