[package]
name = "aggregator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util = "0.3.31"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-swagger-ui-vendored.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
workspace-hack.workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
