[package]
name = "feeders"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
megalodon.workspace = true
prost-types.workspace = true
proto-definitions.workspace = true
rdkafka.workspace = true
social-engine.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
futures-util.workspace = true
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["kafka"] }
