[package]
name = "social-consumer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
redis.workspace = true
social-engine.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
workspace-hack.workspace = true
