[package]
name = "social-consumer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
redis.workspace = true
social-engine.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
workspace-hack.workspace = true
proto-definitions.workspace = true
prost.workspace = true
url.workspace = true
