[package]
name = "proto-definitions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
prost.workspace = true
workspace-hack.workspace = true

[build-dependencies]
prost-build.workspace = true
