[package]
name = "social-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
prost.workspace = true
proto-definitions.workspace = true
rdkafka.workspace = true
schema_registry_converter.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
workspace-hack.workspace = true
