[package]
name = "workspace-hack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

# The parts of the file between the BEGIN HAKARI SECTION and END HAKARI SECTION comments
# are managed by hakari.

### BEGIN HAKARI SECTION
[dependencies]
bytes = { version = "1" }
either = { version = "1", default-features = false, features = ["use_std"] }
futures-core = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["io", "sink"] }
indexmap = { version = "2", features = ["serde"] }
itertools = { version = "0.14" }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
percent-encoding = { version = "2" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
serde = { version = "1", features = ["derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
smallvec = { version = "1", default-features = false, features = ["const_new"] }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
sync_wrapper = { version = "1", default-features = false, features = ["futures"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }

[build-dependencies]
either = { version = "1", default-features = false, features = ["use_std"] }
indexmap = { version = "2", features = ["serde"] }
itertools = { version = "0.14" }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
serde_core = { version = "1", features = ["alloc", "rc"] }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

[target.x86_64-unknown-linux-gnu.dependencies]
bitflags = { version = "2", default-features = false, features = ["std"] }
getrandom = { version = "0.3", default-features = false, features = ["std"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "client-proxy", "http1", "server", "service"] }
libc = { version = "0.2" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", default-features = false, features = ["log", "make", "retry", "timeout"] }

### END HAKARI SECTION
