[package]
name = "workspace-hack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

# The parts of the file between the BEGIN HAKARI SECTION and END HAKARI SECTION comments
# are managed by hakari.

### BEGIN HAKARI SECTION
[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-core = { version = "0.5", default-features = false, features = ["tracing"] }
bytes = { version = "1" }
either = { version = "1", features = ["use_std"] }
futures-channel = { version = "0.3", features = ["sink"] }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
getrandom-6f8ce4dd05d13bba = { package = "getrandom", version = "0.2", default-features = false, features = ["std"] }
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "service"] }
idna = { version = "1" }
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
num-traits = { version = "0.2", default-features = false, features = ["i128", "std"] }
percent-encoding = { version = "2" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
smallvec = { version = "1", default-features = false, features = ["const_new"] }
sync_wrapper = { version = "1", default-features = false, features = ["futures"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tower = { version = "0.5", default-features = false, features = ["balance", "buffer", "limit", "log"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }

[build-dependencies]
bytes = { version = "1" }
either = { version = "1", features = ["use_std"] }
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
serde_core = { version = "1", features = ["alloc", "rc"] }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

[target.x86_64-unknown-linux-gnu.dependencies]
bitflags = { version = "2", default-features = false, features = ["std"] }
getrandom-468e82937335b1c9 = { package = "getrandom", version = "0.3", default-features = false, features = ["std"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-proxy"] }
libc = { version = "0.2" }
rustix = { version = "1", features = ["fs"] }
tower = { version = "0.5", default-features = false, features = ["retry", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "follow-redirect", "trace"] }

[target.x86_64-unknown-linux-gnu.build-dependencies]
bitflags = { version = "2", default-features = false, features = ["std"] }
getrandom-468e82937335b1c9 = { package = "getrandom", version = "0.3", default-features = false, features = ["std"] }
libc = { version = "0.2" }
rustix = { version = "1", features = ["fs"] }

### END HAKARI SECTION
